add and improve examples from Java 7 to Java 26