@@ -5,34 +5,44 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.github.ufuk</groupId>
     <artifactId>java-new-features-demos</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>java-new-features-demos</name>
-    <description>What changed in a Java developer's daily life, from Java 6 to Java 23?</description>
+    <description>What changed in a Java developer's daily life, from Java 6 to Java 26?</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>24</maven.compiler.source>
-        <maven.compiler.target>24</maven.compiler.target>
-        <java.version>24</java.version>
+        <maven.compiler.source>26</maven.compiler.source>
+        <maven.compiler.target>26</maven.compiler.target>
+        <java.version>26</java.version>
 
-        <junit-5.version>5.13.3</junit-5.version>
-        <mockito.version>5.18.0</mockito.version>
-        <assertj.version>3.27.3</assertj.version>
-        <apache-commons-lang.version>3.17.0</apache-commons-lang.version>
+        <junit.version>6.1.3</junit.version>
+        <mockito.version>5.23.0</mockito.version>
+        <assertj.version>3.27.7</assertj.version>
+        <apache-commons-lang.version>3.20.0</apache-commons-lang.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.junit</groupId>
+                <artifactId>junit-bom</artifactId>
+                <version>${junit.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-5.version}</version>
             <scope>test</scope>
         </dependency>
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>${junit-5.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -73,6 +83,13 @@
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                     <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>--enable-preview</argLine>
                 </configuration>
             </plugin>
         </plugins>
